Sat Sep 27 04:28:41 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rmext): preceding dots are not a part of extension.

	* file.c (rb_file_s_extname): ditto.

Sat Sep 27 03:12:40 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/socket/socket.c (host_str): numeric address should be unsigned.
	  [ruby-core:18971]

Fri Sep 26 18:24:28 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* misc/ruby-mode.el: safe custimizable variables.

Wed Sep 24 14:40:21 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* lib/tmpdir.rb: setup buffer with nul characters instead of spaces.
	  fixed [ruby-dev:36493]

Wed Sep 24 14:11:59 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/rexml/formatters/pretty.rb (REXML::Formatters::Pretty#wrap):
	  abandon wrapping if the line contains no space.  [ruby-dev:36045]
	  fix: #342

Tue Sep 23 19:50:24 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (subtruct): check tv_sec.

Tue Sep 23 19:30:41 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (filetime_to_timeval): new function, split from
	  gettimeofday().

	* win32/win32.c (gettimeofday): use above function.

	* win32/win32.c (filetime_to_unixtime): ditto. [ruby-dev:36135]

Tue Sep 23 16:59:45 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* hash.c (ENVMATCH, ENVNMATCH): reduced same code.

Tue Sep 23 08:20:59 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* misc/ruby-mode.el: updated to the latest trunk (without encoding
	  magic comment hook).

	* misc/ruby-mode.el (ruby-keyword-end-re): emacs21 support.  a
	  patch from Hiroshi Moriyama <hiroshi at kvd.biglobe.ne.jp> in
	  [ruby-dev:36471].

	* misc/ruby-mode.el (ruby-in-ppss-context-p): ditto.

	* misc/ruby-mode.el (ruby-here-doc-end-syntax): 

Fri Sep 19 17:41:56 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* configure.in: applied OS/2 support patch from Brendan Oakley
	  <gentux2 at gmail.com> in [ruby-core:18707].

Fri Sep 19 09:29:26 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>
