@@ -1,15 +1,15 @@
 #define RUBY_VERSION "1.8.7"
-#define RUBY_RELEASE_DATE "2008-09-27"
+#define RUBY_RELEASE_DATE "2008-10-01"
 #define RUBY_VERSION_CODE 187
-#define RUBY_RELEASE_CODE 20080927
+#define RUBY_RELEASE_CODE 20081001
 #define RUBY_PATCHLEVEL 5000
 
 #define RUBY_VERSION_MAJOR 1
 #define RUBY_VERSION_MINOR 8
 #define RUBY_VERSION_TEENY 7
 #define RUBY_RELEASE_YEAR 2008
-#define RUBY_RELEASE_MONTH 9
-#define RUBY_RELEASE_DAY 27
+#define RUBY_RELEASE_MONTH 10
+#define RUBY_RELEASE_DAY 1
 
 #ifdef RUBY_EXTERN
 RUBY_EXTERN const char ruby_version[];
