@@ -1,3 +1,8 @@
+Wed Oct  1 18:57:31 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* marshal.c (marshal_dump): initializes dump_arg before any funcall.
+	  [ruby-dev:36648]
+
 Sat Sep 27 04:28:41 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* file.c (rmext): preceding dots are not a part of extension.
